remove runtime JVM warnings